Build with jdk17 now that elasticbeanstalk supports it [BREAKING CHANGE]
Build on circle using jdk17 (ubuntu 22.04 image).
Update tests for minor changes (eg java.time.Year validation,
coroutine main dispatcher replacement).

Update nginx config to support timeouts using amazon linux2
mechanism of .platform directory.

Run ktlint through maven-antrun-plugin to fork off a process
that can run with needed --add-opens argument.

Bump version to 1.33.x.